corrected style of header dashboard for better alignment of counters

--- a/src/styles/sass/views/_dashboard.scss
+++ b/src/styles/sass/views/_dashboard.scss
@@ -10,6 +10,14 @@
     background-color: $faded-green-grey;
   }
 
+  &-counters {
+
+    @include tablet {
+      margin: 5rem;
+
+    }
+  }
+
   .counter-value {
     font-size: $font-08 !important;
   }
